Implement new operand to deal with immediate loads